--- a/public/styles.css
+++ b/public/styles.css
@@ -145,6 +145,14 @@
     font-family: inherit;
     resize: none;
   }
+  
+.chart {
+  width: 35%;
+  height: 35%;
+  border: solid;
+  border-color: black;
+}
+
   form.create-note button {
     position: absolute;
     right: 18px;
@@ -158,4 +166,4 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
     cursor: pointer;
     outline: none;
-  }
+  } 
