--- a/public/styles.css
+++ b/public/styles.css
@@ -146,9 +146,7 @@
     resize: none;
   }
   
-.chart {
-  width: 35%;
-  height: 35%;
+.cube {
   border: solid;
   border-color: black;
 }
@@ -167,3 +165,20 @@
     cursor: pointer;
     outline: none;
   } 
+
+
+  .wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+  }
+
+  .one {
+    grid-column: 1 / 3;
+    grid-row: 1;
+  }
+  .two {
+    grid-column: 3 / 4;
+    grid-row: 1 ;
+  }
