[FIX] Edit Notes

--- a/public/styles.css
+++ b/public/styles.css
@@ -80,6 +80,12 @@
     outline: none;
   }
 
+  .close {
+    position: relative;
+    right: 0%;
+    bottom: 1%;
+  }
+
   footer p {
     color: #ccc;
   }
@@ -151,6 +157,26 @@
   border-color: black;
 }
 
+.modal {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  
+  margin: auto;
+  width: 80%;
+}
+
   form.create-note button {
     position: absolute;
     right: 18px;
@@ -170,8 +196,8 @@
   .wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 1px;
+    grid-auto-rows: minmax(50px, auto);
   }
 
   .one {
@@ -181,4 +207,12 @@
   .two {
     grid-column: 3 / 4;
     grid-row: 1 ;
+  }
+  .three {
+    grid-column: 1/4;
+    grid-row: 2 ;
+  }
+
+  .closeX{
+    text-align: right;
   }
